----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-04-06 Garvin Hicking <me@supergarv.de>
    * header.inc.php3, footer.inc.php3, libraries/common.lib.php3,
      libraries/relation.lib.php3: RFE #715914: Sort query history by
      (autoincrement) key instead of timevalue. Only save queries in
      history if they were successful. This required the moving of
      the JS-stuff in header.inc.php3 to footer.inc.php3. Please
      test, if this works for everyone. It does for me.

2003-04-06 Alexander M. Turek  <rabus@users.sourceforge.net>
    * db_datadict.php3: The result of SHOW INDEX does not have a 'Comment'
      column before MySQL 3.23 (bug #712055).
    * libraries/grab_globals.lib.php3: Make $HTTP_ACCEPT_LANGUAGE available for
      machines with register_globals = off.

2003-04-05 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/romanian updates, thanks to Valics Lehel
    * lang/slovenian update, thanks to Kositer Uros

2003-04-03 Garvin Hicking <me@supergarv.de>
    * libraries/display_tbl.lib.php3: Bug #714744 fixed. Thanks to poster.

2003-04-02 Garvin Hicking <me@supergarv.de>
    * tbl_query_box.php3: RFE #714095. Use backquotes for inserted fields.
    * tbl_move_copy.php3: At least one of the PDF integrity checks
      on moving/copying a table can safely be enabled.
    * tbl_move_copy.php3, tbl_properties_operations.php3: Made 'move to
      newly created table' depend on a selected checkbox. State of that
      checkbox is saved in a cookie.
    * lang/*: Added $strSwitchToTable for the above.
    * lang/german-*: Translations

2003-04-02 Michal Cihar  <nijel@users.sourceforge.net>
    * tbl_move_copy.php3: Fixed copying/moving to work after some changes in
      generated SQL dump, move to newly created table also after copying.
    * tbl_properties_operations.php3: Some fixes for html entities in db/table
      names.
    * db_details_structure.php3, mult_submits.inc.php3,